@@ -1,4 +1,4 @@
-/* Generated by GOB (v2.0.11) on Wed May 25 16:18:57 2005
+/* Generated by GOB (v2.0.11) on Wed May 25 17:53:01 2005
    (do not edit directly) */
 
 /* End world hunger, donate to the World Food Programme, http://www.wfp.org */
@@ -611,11 +611,10 @@ games_scores_dialog_set_message (GamesScoresDialog * self, const gchar * message
     } else {
       gtk_widget_show (self->_priv->message);
       gtk_widget_show (self->_priv->hdiv);
+      gtk_label_set_label (GTK_LABEL (self->_priv->message), message);
     }
-
-    gtk_label_set_label (GTK_LABEL (self->_priv->message), message);
   }}
-#line 619 "games-scores-dialog.c"
+#line 618 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
 
 /**
@@ -626,14 +625,14 @@ games_scores_dialog_set_message (GamesScoresDialog * self, const gchar * message
  * Changes the button sets at the buttom of the dialog
  *
  **/
-#line 421 "games-scores-dialog.gob"
+#line 420 "games-scores-dialog.gob"
 void 
 games_scores_dialog_set_buttons (GamesScoresDialog * self, guint buttons)
-#line 633 "games-scores-dialog.c"
+#line 632 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::set_buttons"
 {
-#line 421 "games-scores-dialog.gob"
+#line 420 "games-scores-dialog.gob"
 	
     /* Remove an existing buttons. */
     gtk_container_foreach (GTK_CONTAINER (GTK_DIALOG (self)->action_area),
@@ -672,5 +671,5 @@ games_scores_dialog_set_buttons (GamesScoresDialog * self, guint buttons)
 	       			         GTK_RESPONSE_CLOSE);
     }
   }}
-#line 676 "games-scores-dialog.c"
+#line 675 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
