@@ -3,6 +3,7 @@
 	* games-scores-dialog.gob: Split the button setting routine out
 	from the initialiser and give it its own function. This results in
 	nicer code.
+	Oops: make _set_message handle NULL strings properly.
 
 2005-05-24  Callum McKenzie  <callum@physics.otago.ac.nz>
 
